--- a/src/components/PortfolioSection.astro
+++ b/src/components/PortfolioSection.astro
@@ -30,6 +30,6 @@ import Flower from './Flower.astro';
     />
   </div>
   <Flower
-    class="absolute top-44 -right-12 w-32 lg:top-40 lg:-right-28 lg:w-48 -scale-x-100"
+    class="absolute top-[20rem] right-28 w-32 lg:top-40 lg:-right-28 lg:w-48 -scale-x-100"
   />
 </section>
