--- a/src/components/SimpleMediaAndDescription.astro
+++ b/src/components/SimpleMediaAndDescription.astro
@@ -19,7 +19,7 @@ const { name } = Astro.props;
     <slot name="media" />
   </div>
   <div
-    class="description mx-auto w-fit lg:col-start-2 lg:row-start-2 max-w-[23rem] p-6 font-poppins font-light text-base"
+    class="description mx-auto w-fit lg:col-start-2 lg:row-start-2 p-6 font-poppins font-light text-base"
   >
     <slot name="description" />
   </div>
