--- a/src/components/YourKayaGrid.astro
+++ b/src/components/YourKayaGrid.astro
@@ -11,48 +11,48 @@ import Cell8 from '../assets/your-kaya/cell-8.mp4';
 ---
 
 <section
-  class="mx-auto py-32 grid grid-cols-2 xl:grid-cols-4 w-fit gap-x-8 gap-y-3"
+  class="mx-auto py-32 grid grid-cols-2 lg:grid-cols-4 w-fit gap-x-8 gap-y-3"
 >
   <Image
     src={Cell1}
     alt="Cell number 1"
-    class="w-32 lg:w-60 border border-black aspect-[2160/2700] object-cover"
+    class="w-32 md:w-52 xl:w-60 border border-black aspect-[2160/2700] object-cover"
   />
   <Image
     src={Cell2}
     alt="Cell number 2"
-    class="w-32 lg:w-60 border border-black aspect-[2160/2700] object-cover"
+    class="w-32 md:w-52 xl:w-60 border border-black aspect-[2160/2700] object-cover"
   />
   <Image
     src={Cell3}
     alt="Cell number 3"
-    class="w-32 lg:w-60 border border-black aspect-[2160/2700] object-cover"
+    class="w-32 md:w-52 xl:w-60 border border-black aspect-[2160/2700] object-cover"
   />
   <Image
     src={Cell4}
     alt="Cell number 4"
-    class="w-32 lg:w-60 border border-black aspect-[2160/2700] object-cover"
+    class="w-32 md:w-52 xl:w-60 border border-black aspect-[2160/2700] object-cover"
   />
   <Image
     src={Cell5}
     alt="Cell number 5"
-    class="w-32 lg:w-60 border border-black aspect-[2160/2700] object-cover"
+    class="w-32 md:w-52 xl:w-60 border border-black aspect-[2160/2700] object-cover"
   />
   <Image
     src={Cell6}
     alt="Cell number 6"
-    class="w-32 lg:w-60 border border-black aspect-[2160/2700] object-cover"
+    class="w-32 md:w-52 xl:w-60 border border-black aspect-[2160/2700] object-cover"
   />
   <Image
     src={Cell7}
     alt="Cell number 7"
-    class="w-32 lg:w-60 border border-black aspect-[2160/2700] object-cover"
+    class="w-32 md:w-52 xl:w-60 border border-black aspect-[2160/2700] object-cover"
   />
   <video
     src={Cell8}
     muted
     autoplay
     loop
-    class="w-32 lg:w-60 border border-black aspect-[2160/2700] object-cover"
+    class="w-32 md:w-52 xl:w-60 border border-black aspect-[2160/2700] object-cover"
   ></video>
 </section>
