Optimized some of the images

--- a/src/components/Flower.astro
+++ b/src/components/Flower.astro
@@ -16,6 +16,8 @@ const { class: className } = Astro.props;
   ]}
   src={FlowerSaturated}
   alt="Flower"
+  widths={[768]}
+  sizes="768px"
   role="presentation"
 />
 
