--- a/src/components/PortfolioSection.astro
+++ b/src/components/PortfolioSection.astro
@@ -16,16 +16,22 @@ import Flower from './Flower.astro';
     <Image
       src={IdPhotoGrey}
       alt="Zdjęcie dowodu osobistego (1)"
+      widths={[460]}
+      sizes="460px"
       class="w-32 lg:w-58 border border-black"
     />
     <Image
       src={IdPhotoDark}
       alt="Zdjęcie dowodu osobistego (2)"
+      widths={[460]}
+      sizes="460px"
       class="w-32 lg:w-58 border border-black"
     />
     <Image
       src={IdPhotoLight}
       alt="Zdjęcie dowodu osobistego (3)"
+      widths={[460]}
+      sizes="460px"
       class="w-32 lg:w-58 border border-black"
     />
   </div>
