--- a/src/components/PrzesuwaneKafelki.astro
+++ b/src/components/PrzesuwaneKafelki.astro
@@ -22,24 +22,32 @@ import Flower from './Flower.astro';
       src={Franca2}
       alt="Screenshot telefonu"
       role="presentation"
+      widths={[448]}
+      sizes="448px"
       class="w-[7rem] h-[11rem] lg:w-[14rem] lg:h-[22rem] object-cover"
     />
     <Image
       src={Franca3}
       alt="Screenshot telefonu"
       role="presentation"
+      widths={[448]}
+      sizes="448px"
       class="w-[7rem] h-[11rem] lg:w-[14rem] lg:h-[22rem] object-cover"
     />
     <Image
       src={Franca4}
       alt="Screenshot telefonu"
       role="presentation"
+      widths={[448]}
+      sizes="448px"
       class="w-[7rem] h-[11rem] lg:w-[14rem] lg:h-[22rem] object-cover"
     />
     <Image
       src={Franca5}
       alt="Screenshot telefonu"
       role="presentation"
+      widths={[448]}
+      sizes="448px"
       class="w-[7rem] h-[11rem] lg:w-[14rem] lg:h-[22rem] object-cover"
     />
   </div>
