--- a/src/components/YourKayaGrid.astro
+++ b/src/components/YourKayaGrid.astro
@@ -16,36 +16,50 @@ import Cell8 from '../assets/your-kaya/cell-8.mp4';
   <Image
     src={Cell1}
     alt="Cell number 1"
+    widths={[412]}
+    sizes="412px"
     class="w-32 md:w-52 xl:w-60 border border-black aspect-[2160/2700] object-cover"
   />
   <Image
     src={Cell2}
     alt="Cell number 2"
+    widths={[412]}
+    sizes="412px"
     class="w-32 md:w-52 xl:w-60 border border-black aspect-[2160/2700] object-cover"
   />
   <Image
     src={Cell3}
     alt="Cell number 3"
+    widths={[412]}
+    sizes="412px"
     class="w-32 md:w-52 xl:w-60 border border-black aspect-[2160/2700] object-cover"
   />
   <Image
     src={Cell4}
     alt="Cell number 4"
+    widths={[412]}
+    sizes="412px"
     class="w-32 md:w-52 xl:w-60 border border-black aspect-[2160/2700] object-cover"
   />
   <Image
     src={Cell5}
     alt="Cell number 5"
+    widths={[412]}
+    sizes="412px"
     class="w-32 md:w-52 xl:w-60 border border-black aspect-[2160/2700] object-cover"
   />
   <Image
     src={Cell6}
     alt="Cell number 6"
+    widths={[412]}
+    sizes="412px"
     class="w-32 md:w-52 xl:w-60 border border-black aspect-[2160/2700] object-cover"
   />
   <Image
     src={Cell7}
     alt="Cell number 7"
+    widths={[412]}
+    sizes="412px"
     class="w-32 md:w-52 xl:w-60 border border-black aspect-[2160/2700] object-cover"
   />
   <video
