--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -15,6 +15,8 @@ import Flower from './Flower.astro';
       src={PhotoGrid}
       alt="A photo grid"
       class="w-[24rem] border border-black"
+      widths={[764]}
+      sizes="764px"
     />
     <Flower class="absolute bottom-10 left-10 w-[7rem]" />
     <Flower class="absolute top-12 right-6 w-[7rem] -scale-x-100" />
