--- a/src/components/Home.astro
+++ b/src/components/Home.astro
@@ -55,12 +55,16 @@ import YourKayaGrid from './YourKayaGrid.astro';
         <Image
           src={MiniWera2}
           class="absolute top-0 left-2 w-28"
+          widths={[224]}
+          sizes="224px"
           alt="A picture of Weronika Kubala"
           role="presentation"
         />
         <Image
           src={MiniWera3}
           class="absolute top-48 left-14 w-72"
+          widths={[650]}
+          sizes="650px"
           alt="A picture of Weronika Kubala"
           role="presentation"
         />
@@ -85,6 +89,8 @@ import YourKayaGrid from './YourKayaGrid.astro';
         <Image
           src={MiniWera1}
           class="absolute bottom-0 right-0 w-[16rem]"
+          widths={[512]}
+          sizes="512px"
           alt="A picture of Weronika Kubala"
           role="presentation"
         />
@@ -103,6 +109,8 @@ import YourKayaGrid from './YourKayaGrid.astro';
           <Flower class="absolute top-0 left-0 w-48" />
           <Image
             src={MiniWera2}
+            widths={[192]}
+            sizes="192px"
             class="absolute top-0 left-2 w-24"
             alt="A picture of Weronika Kubala"
             role="presentation"
@@ -125,6 +133,8 @@ import YourKayaGrid from './YourKayaGrid.astro';
           <Flower class="absolute top-0 left-26 w-52 -scale-x-100" />
           <Image
             src={MiniWera3}
+            widths={[480]}
+            sizes="480px"
             class="absolute top-12 left-0 w-60"
             alt="A picture of Weronika Kubala"
             role="presentation"
@@ -148,6 +158,8 @@ import YourKayaGrid from './YourKayaGrid.astro';
       <div class="relative pl-32 lg:pl-36 w-fit">
         <Image
           src={OMojejDrodze}
+          widths={[636]}
+          sizes="636px"
           alt="A picture of Weronika Kubala"
           class="border border-black w-60 lg:w-80"
         />
@@ -188,6 +200,8 @@ import YourKayaGrid from './YourKayaGrid.astro';
     >
       <Image
         src={InstagramScreenshot}
+        widths={[572]}
+        sizes="572px"
         alt="Instagram screenshot"
         class="w-[9rem] lg:w-[18rem] border border-black"
       />
@@ -197,6 +211,8 @@ import YourKayaGrid from './YourKayaGrid.astro';
       </div>
       <Image
         src={HandWithBouquet}
+        widths={[768]}
+        sizes="768px"
         alt="Bukiet kwiatów"
         class="absolute right-0 bottom-0 w-[12rem] lg:w-[24rem]"
       />
@@ -265,6 +281,8 @@ import YourKayaGrid from './YourKayaGrid.astro';
       <Image
         src={HandWithFlower}
         alt="Kwiat w mojej dłoni"
+        widths={[572]}
+        sizes="572px"
         class="w-72 border border-black"
       />
     </div>
@@ -323,6 +341,8 @@ import YourKayaGrid from './YourKayaGrid.astro';
       slot="media"
       src={MediaOlejkiDoUstYourKayaProduktWUzyciu}
       alt="Zdjęcie produktu na smartfonie"
+      widths={[576]}
+      sizes="576px"
       class="w-[18rem]"
     />
     <div slot="description" class="max-w-[25rem]">
