--- a/src/components/PhoneInstagram.astro
+++ b/src/components/PhoneInstagram.astro
@@ -20,13 +20,6 @@ import { Image } from 'astro:assets';
         loop></video>
     </div>
   </div>
-  <!-- <Image
-    class="phone-instagram-content absolute inset-0 z-10 h-[100%]"
-    src={PhotoGrid}
-    alt="TEMP"
-    role="presentation"
-  /> -->
-
   <svg width="0" height="0">
     <defs>
       <clipPath id="phone-instagram-clippath" clipPathUnits="objectBoundingBox">
@@ -39,6 +32,8 @@ import { Image } from 'astro:assets';
   <Image
     class="absolute inset-0"
     src={PhoneInstagramBg}
+    widths={[512]}
+    sizes="512px"
     alt="Phone mockup"
     role="presentation"
   />
