Inline videos, better spacing

--- a/src/components/Home.astro
+++ b/src/components/Home.astro
@@ -45,7 +45,7 @@ import YourKayaGrid from './YourKayaGrid.astro';
 <NavBar />
 <main class="">
   <!-- <p class="font-msmadi text-xl mb-10">trwa proces twórczy</p> -->
-  <section id="o-mnie">
+  <section id="o-mnie" class="mb-20">
     <h1 class="sr-only">O mnie</h1>
     <div class="hidden lg:flex justify-center items-start pt-48">
       <!-- Desktop -->
@@ -144,7 +144,7 @@ import YourKayaGrid from './YourKayaGrid.astro';
     </div>
   </section>
   <section
-    class="pt-24 w-fit w-content mx-auto grid grid-cols-1 grid-rows-[auto,auto,auto] lg:grid-cols-[auto,auto] lg:grid-rows-[auto,1fr] gap-x-20"
+    class="pt-24 mb-20 w-fit w-content mx-auto grid grid-cols-1 grid-rows-[auto,auto,auto] lg:grid-cols-[auto,auto] lg:grid-rows-[auto,1fr] gap-x-20"
   >
     <h1 class="sr-only">O mojej drodze</h1>
     <div class="lg:col-start-1 lg:row-start-1 flex justify-end">
@@ -237,7 +237,7 @@ import YourKayaGrid from './YourKayaGrid.astro';
   </section>
   <section
     id="copywriting"
-    class="mx-auto pt-32 w-fit grid lg:gap-x-16 grid-cols-[auto] grid-rows-[auto_auto_1fr] lg:grid-cols[auto_auto] lg:grid-rows-[auto_1fr] min-h-[36rem]"
+    class="mx-auto pt-64 pb-32 w-fit grid lg:gap-x-16 grid-cols-[auto] grid-rows-[auto_auto_1fr] lg:grid-cols[auto_auto] lg:grid-rows-[auto_1fr] min-h-[36rem]"
   >
     <h1 class="sr-only">Copywriting</h1>
     <Image
@@ -267,7 +267,7 @@ import YourKayaGrid from './YourKayaGrid.astro';
   </section>
   <section
     id="ugc"
-    class="mx-auto pt-32 w-fit grid lg:gap-x-36 grid-cols-[auto] grid-rows-[auto_auto_1fr] lg:grid-cols[auto_auto] lg:grid-rows-[auto_1fr]"
+    class="mx-auto pt-64 pb-32 w-fit grid lg:gap-x-36 grid-cols-[auto] grid-rows-[auto_auto_1fr] lg:grid-cols[auto_auto] lg:grid-rows-[auto_1fr]"
   >
     <h1 class="sr-only">UGC</h1>
     <Image
