--- a/src/components/PhoneInstagram.astro
+++ b/src/components/PhoneInstagram.astro
@@ -17,6 +17,7 @@ import { Image } from 'astro:assets';
         src={InstagramRecording}
         muted
         autoplay
+        playsinline
         loop></video>
     </div>
   </div>
