--- a/src/components/YourKayaGrid.astro
+++ b/src/components/YourKayaGrid.astro
@@ -67,6 +67,7 @@ import Cell8 from '../assets/your-kaya/cell-8.mp4';
     muted
     autoplay
     loop
+    playsinline
     class="w-32 md:w-52 xl:w-60 border border-black aspect-[2160/2700] object-cover"
   ></video>
 </section>
