--- a/src/components/Home.astro
+++ b/src/components/Home.astro
@@ -105,13 +105,13 @@ import YourKayaGrid from './YourKayaGrid.astro';
         class="w-[20rem] mb-8"
       />
       <div class="flex justify-center">
-        <div class="relative w-[15rem] h-[20rem]">
-          <Flower class="absolute top-0 left-0 w-48" />
+        <div class="relative w-[10rem] h-[14rem]">
+          <Flower class="absolute top-8 left-0 w-32" />
           <Image
             src={MiniWera2}
             widths={[192]}
             sizes="192px"
-            class="absolute top-0 left-2 w-24"
+            class="absolute top-0 left-0 w-20"
             alt="A picture of Weronika Kubala"
             role="presentation"
           />
@@ -121,14 +121,14 @@ import YourKayaGrid from './YourKayaGrid.astro';
             Całe dotychczasowe życie spędziłam na odkrywaniu jednej prawdy o
             sobie:
           </p>
-          <Image
-            src={QuoteJestemStworzonaZebyTworzyc}
-            alt="Jestem stworzona żeby tworzyć"
-            class="absolute max-w-none w-72 -left-24 top-[11rem]"
-          />
         </div>
       </div>
-      <div class="flex justify-center">
+      <Image
+        src={QuoteJestemStworzonaZebyTworzyc}
+        alt="Jestem stworzona żeby tworzyć"
+        class="max-w-none w-64"
+      />
+      <div class="flex justify-center pt-20">
         <div class="relative w-[20rem] h-[23rem]">
           <Flower class="absolute top-0 left-26 w-52 -scale-x-100" />
           <Image
