--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -8,7 +8,7 @@ import Flower from './Flower.astro';
 
 <section
   id="kontakt"
-  class="mx-auto mt-20 grid grid-cols-1 grid-rows-[auto,auto,auto] lg:grid-cols-[auto,auto] lg:grid-rows-[auto,auto] pb-48 w-fit"
+  class="mx-auto mt-48 pt-32 grid grid-cols-1 grid-rows-[auto,auto,auto] lg:grid-cols-[auto,auto] lg:grid-rows-[auto,auto] pb-48 w-fit"
 >
   <div class="col-start-1 lg:row-start-1 lg:row-span-2 relative p-20 w-fit">
     <Image
