--- a/src/components/Home.astro
+++ b/src/components/Home.astro
@@ -21,7 +21,7 @@ import MediaUnboxingGumekFrancaUGCBeautyProduktWUzyciuVoiceover from '../assets/
 import TitleWieczornaPielegnacjaZBasicLabUGCYouTubeSkincareRoutine from '../assets/title-wieczorna-pielegnacja-z-basic-lab-skincare-routine.svg';
 import MediaWieczornaPielegnacjaZBasicLabUGCYouTubeSkincareRoutine from '../assets/media-wieczorna-pielegnacja-z-basic-lab-skincare-routine.png';
 import QuoteJestemStworzonaZebyTworzyc from '../assets/quote-jestem-stworzona-zeby-tworzyc.svg';
-import QuoteCzujeSieNajbardziej from '../assets/quote-czuje-sie-najbardziej-zywa-kiedy-ciagle-probuje.svg';
+import QuoteCzujeZeNaprawdeZyje from '../assets/quote-czuje-ze-naprawde-zyje-kiedy-ciagle-probuje.svg';
 import QuoteSocialMedia from '../assets/quote-social-media.svg';
 import QuoteSlowoWieleZnaczy from '../assets/quote-slowo-wiele-znaczy.svg';
 import InstagramScreenshot from '../assets/instagram-screenshot.jpg';
@@ -180,7 +180,7 @@ import YourKayaGrid from './YourKayaGrid.astro';
         lecz odkrywanie i realizacja w wielu.
       </p>
       <Image
-        src={QuoteCzujeSieNajbardziej}
+        src={QuoteCzujeZeNaprawdeZyje}
         alt="Czuję się najbardziej żywa kiedy ciągle próbuję"
         class="self-end w-80 mt-6"
       />
@@ -402,22 +402,24 @@ import YourKayaGrid from './YourKayaGrid.astro';
       slot="media"
       src={MediaZestawDoStylizacjiWlosow}
       class="w-[18rem]"></video>
-    <div slot="description" class="max-w-[23rem]">
-      <p>
-        Typ contentu: Reels – pokaz działania produktów (beauty
-        tutorial/styling)<br />
-        Produkt: klej stylizujący + lakier do włosów<br />
-        Rola: koncepcja, nagranie, stylizacja włosów, montaż, kreatywna oprawa (grafika
-        + elementy wiosenne)<br />
-        Kategoria: UGC – beauty/produkt w użyciu/włosy<br />
-        Cel: prezentacja działania dwóch produktów w praktyce
-      </p><p class="mt-8">
-        Ten Reels to stylizacyjna opowieść o dobrym dniu dla włosów – bez
-        względu na kaprysy pogody. Pokazałam dwa sposoby użycia zestawu: krem
-        stylizacyjny w sleek bunie i lakier utrwalający naturalne loki. Całość
-        uzupełniłam kwiatowym akcentem – forsycja podbiła żółtą grafikę
-        produktów i nadała filmowi świeży, wiosenny vibe.
-      </p>
+    <div slot="description" class="w-[25rem]">
+      <div class="max-w-[23rem]">
+        <p>
+          Typ contentu: Reels – pokaz działania produktów (beauty
+          tutorial/styling)<br />
+          Produkt: klej stylizujący + lakier do włosów<br />
+          Rola: koncepcja, nagranie, stylizacja włosów, montaż, kreatywna oprawa
+          (grafika + elementy wiosenne)<br />
+          Kategoria: UGC – beauty/produkt w użyciu/włosy<br />
+          Cel: prezentacja działania dwóch produktów w praktyce
+        </p><p class="mt-8">
+          Ten Reels to stylizacyjna opowieść o dobrym dniu dla włosów – bez
+          względu na kaprysy pogody. Pokazałam dwa sposoby użycia zestawu: krem
+          stylizacyjny w sleek bunie i lakier utrwalający naturalne loki. Całość
+          uzupełniłam kwiatowym akcentem – forsycja podbiła żółtą grafikę
+          produktów i nadała filmowi świeży, wiosenny vibe.
+        </p>
+      </div>
     </div>
   </SimpleMediaAndDescription>
   <SimpleMediaAndDescription name="Olejki do ust Your Kaya">
