--- a/src/components/SimpleMediaAndDescription.astro
+++ b/src/components/SimpleMediaAndDescription.astro
@@ -7,7 +7,7 @@ const { name } = Astro.props;
 ---
 
 <section
-  class="mx-auto mt-20 w-fit grid grid-cols-1 grid-rows-[auto_auto_auto] lg:grid-cols-[auto,auto] lg:grid-rows-[auto_1fr] gap-x-16"
+  class="mx-auto mt-20 mb-20 w-fit grid grid-cols-1 grid-rows-[auto_auto_auto] lg:grid-cols-[auto,auto] lg:grid-rows-[auto_1fr] gap-x-16"
 >
   <h1 class="sr-only">{name}</h1>
   <div
