--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -23,6 +23,7 @@
     <li><a href="#social-media">social media</a></li>
     <li><a href="#copywriting">copywriting</a></li>
     <li><a href="#ugc">ugc</a></li>
+    <li><a href="#portfolio">portfolio</a></li>
     <li><a href="#kontakt">kontakt</a></li>
   </ul>
 </nav>
