--- a/src/components/Home.astro
+++ b/src/components/Home.astro
@@ -402,24 +402,22 @@ import YourKayaGrid from './YourKayaGrid.astro';
       slot="media"
       src={MediaZestawDoStylizacjiWlosow}
       class="w-[18rem]"></video>
-    <div slot="description" class="w-[25rem]">
-      <div class="max-w-[23rem]">
-        <p>
-          Typ contentu: Reels – pokaz działania produktów (beauty
-          tutorial/styling)<br />
-          Produkt: klej stylizujący + lakier do włosów<br />
-          Rola: koncepcja, nagranie, stylizacja włosów, montaż, kreatywna oprawa
-          (grafika + elementy wiosenne)<br />
-          Kategoria: UGC – beauty/produkt w użyciu/włosy<br />
-          Cel: prezentacja działania dwóch produktów w praktyce
-        </p><p class="mt-8">
-          Ten Reels to stylizacyjna opowieść o dobrym dniu dla włosów – bez
-          względu na kaprysy pogody. Pokazałam dwa sposoby użycia zestawu: krem
-          stylizacyjny w sleek bunie i lakier utrwalający naturalne loki. Całość
-          uzupełniłam kwiatowym akcentem – forsycja podbiła żółtą grafikę
-          produktów i nadała filmowi świeży, wiosenny vibe.
-        </p>
-      </div>
+    <div slot="description" class="max-w-[25rem] lg:px-4">
+      <p>
+        Typ contentu: Reels – pokaz działania produktów (beauty
+        tutorial/styling)<br />
+        Produkt: klej stylizujący + lakier do włosów<br />
+        Rola: koncepcja, nagranie, stylizacja włosów, montaż, kreatywna oprawa (grafika
+        + elementy wiosenne)<br />
+        Kategoria: UGC – beauty/produkt w użyciu/włosy<br />
+        Cel: prezentacja działania dwóch produktów w praktyce
+      </p><p class="mt-8">
+        Ten Reels to stylizacyjna opowieść o dobrym dniu dla włosów – bez
+        względu na kaprysy pogody. Pokazałam dwa sposoby użycia zestawu: krem
+        stylizacyjny w sleek bunie i lakier utrwalający naturalne loki. Całość
+        uzupełniłam kwiatowym akcentem – forsycja podbiła żółtą grafikę
+        produktów i nadała filmowi świeży, wiosenny vibe.
+      </p>
     </div>
   </SimpleMediaAndDescription>
   <SimpleMediaAndDescription name="Olejki do ust Your Kaya">
