--- a/src/components/Home.astro
+++ b/src/components/Home.astro
@@ -372,7 +372,11 @@ import YourKayaGrid from './YourKayaGrid.astro';
       alt="Zestaw nosze sztuke UGC Fashion / try on haul"
       class="w-[14rem]"
     />
-    <video controls slot="media" src={DRES} class="w-[18rem]"></video>
+    <video
+      controls
+      slot="media"
+      src={DRES}
+      class="w-[18rem] border border-black"></video>
     <div slot="description" class="max-w-[25rem]">
       <p>
         Typ contentu: video Reels z voiceoverem<br />
@@ -401,7 +405,7 @@ import YourKayaGrid from './YourKayaGrid.astro';
       controls
       slot="media"
       src={MediaZestawDoStylizacjiWlosow}
-      class="w-[18rem]"></video>
+      class="w-[18rem] border border-black"></video>
     <div slot="description" class="max-w-[25rem] lg:px-4">
       <p>
         Typ contentu: Reels – pokaz działania produktów (beauty
