--- a/src/components/SimpleMediaAndDescription.astro
+++ b/src/components/SimpleMediaAndDescription.astro
@@ -16,7 +16,7 @@ const { name } = Astro.props;
     <slot name="title" />
   </div>
   <div
-    class="media mb-8 lg:mb-0 lg:col-start-1 lg:row-start-1 lg:row-span-2 flex"
+    class="media mb-8 lg:mb-0 lg:col-start-1 lg:row-start-1 lg:row-span-2 flex items-center"
   >
     <slot name="media" />
   </div>
