No .mov files actually

--- a/src/components/Home.astro
+++ b/src/components/Home.astro
@@ -7,9 +7,9 @@ import TitleCopywriting from '../assets/title-copywriting.svg';
 import TitleOlejkiDoUstYourKayaProduktWUzyciu from '../assets/title-olejki-do-ust-your-kaya-produkt-w-uzyciu.svg';
 import MediaOlejkiDoUstYourKayaProduktWUzyciu from '../assets/media-olejki-do-ust-your-kaya-produkt-w-uzyciu.png';
 import TitleZestawDoStylizacjiWlosow from '../assets/title-zestaw-do-stylizacji-wlosow-got2be-produkt-w-uzyciu.svg';
-import MediaZestawDoStylizacjiWlosow from '../assets/media-zestaw-do-stylizacji-wlosow-got2be-produkt-w-uzyciu.mov';
+import MediaZestawDoStylizacjiWlosow from '../assets/media-zestaw-do-stylizacji-wlosow-got2be-produkt-w-uzyciu.mp4';
 import TitleOlejkiDoUstYourKayaEverydayLook from '../assets/title-olejki-do-ust-your-kaya-everyday-look.svg';
-import MediaOlejkiDoUstYourKayaEverydayLook from '../assets/media-olejki-do-ust-your-kaya-everyday-look.mov';
+import MediaOlejkiDoUstYourKayaEverydayLook from '../assets/media-olejki-do-ust-your-kaya-everyday-look.mp4';
 import TitleZelDoPraniaCoccolino from '../assets/title-zel-do-prania-coccolino.svg';
 import TitleUGC from '../assets/title-ugc.svg';
 import TitleStylizacjeZGumkamiFrancaUGCFashionLifestyle from '../assets/title-stylizacje-z-gumkami-franca-lifestyle.svg';
